// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`archive pack verbose output should add one deterministic line per decision in verbose mode 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Pack source: <sandbox>/source",
    "Pack destination: <sandbox>/verbose",
    "Pack mode: compress, volume cap 1.86 GB, skip list on, 1 excluded extension(s)",
    "Directory: gameplay",
    "Directory: text\\eng",
    "Directory: text\\ukr",
    "Directory: ui",
    "Directory: ui\\textures_descr",
    "Excluded directory: misc (recursive rule)",
    "Excluded directory: text (shallow rule)",
    "Skipped: notes.md (excluded extension)",
    "Skipped: readme.txt (skip list)",
    "Opened volume: a.db0",
    "Compressed: alife.ltx, 781 B -> 502 B (64.3%)",
    "Compressed: defines.ltx, 3.76 KB -> 1.48 KB (39.3%)",
    "Empty: empty.ltx",
    "Compressed: evaluation.ltx, 276 B -> 238 B (86.2%)",
    "Compressed: fonts.ltx, 1.97 KB -> 0.44 KB (22.5%)",
    "Compressed: game.ltx, 218 B -> 93 B (42.7%)",
    "Compressed: gameplay\\dialogs.xml, 1.63 KB -> 0.48 KB (29.6%)",
    "Compressed: gameplay\\dialogs_zaton.xml, 548 B -> 244 B (44.5%)",
    "Compressed: system.ltx, 265 B -> 208 B (78.5%)",
    "Aliased: system_copy.ltx -> system.ltx",
    "Compressed: text\\eng\\st_items.xml, 203 B -> 135 B (66.5%)",
    "Compressed: text\\eng\\st_ui.xml, 143 B -> 123 B (86.0%)",
    "Compressed: text\\ukr\\st_items.xml, 203 B -> 141 B (69.5%)",
    "Compressed: text\\ukr\\st_ui.xml, 143 B -> 125 B (87.4%)",
    "Reverted: tiny.ltx, 4 B (compression saved nothing)",
    "Compressed: ui\\textures_descr\\ui_test_sheet.xml, 352 B -> 144 B (40.9%)",
    "Closed volume: a.db0, 4.79 KB, 16 entries",
    "Wrote <sandbox>/verbose/a.db",
    "Packed 16 file(s) into 1 volume(s) in <duration>",
    "Summary: 13 compressed, 2 stored, 1 aliased, 2 skipped",
    "Size: 10.7 KB source, 4.79 KB written",
    "Speed: <speed>",
  ],
}
`;

exports[`archive pack verbose output should keep the normal summary compact 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Pack source: <sandbox>/source",
    "Pack destination: <sandbox>/plain",
    "Wrote <sandbox>/plain/a.db",
    "Packed 16 file(s) into 1 volume(s) in <duration>",
    "Summary: 13 compressed, 2 stored, 1 aliased, 2 skipped",
    "Size: 10.7 KB source, 4.79 KB written",
    "Speed: <speed>",
  ],
}
`;

exports[`archive pack verbose output should leave a log naming the opened volume and the last entry before a failure 1`] = `
{
  "exitCode": 1,
  "stderr": [
    "Error: Invalid error: File 'zz_big.bin' needs a volume of 1573117 bytes to itself, past the configured maximum volume size of 1048576 bytes",
  ],
  "stdout": [
    "Pack source: <sandbox>/failing-source",
    "Pack destination: <sandbox>/failing",
    "Pack mode: compress, volume cap 1 MB, skip list on, 1 excluded extension(s)",
    "Directory: gameplay",
    "Directory: text\\eng",
    "Directory: text\\ukr",
    "Directory: ui",
    "Directory: ui\\textures_descr",
    "Excluded directory: misc (recursive rule)",
    "Excluded directory: text (shallow rule)",
    "Skipped: notes.md (excluded extension)",
    "Skipped: readme.txt (skip list)",
    "Opened volume: a.db0",
    "Compressed: alife.ltx, 781 B -> 502 B (64.3%)",
    "Compressed: defines.ltx, 3.76 KB -> 1.48 KB (39.3%)",
    "Empty: empty.ltx",
    "Compressed: evaluation.ltx, 276 B -> 238 B (86.2%)",
    "Compressed: fonts.ltx, 1.97 KB -> 0.44 KB (22.5%)",
    "Compressed: game.ltx, 218 B -> 93 B (42.7%)",
    "Compressed: gameplay\\dialogs.xml, 1.63 KB -> 0.48 KB (29.6%)",
    "Compressed: gameplay\\dialogs_zaton.xml, 548 B -> 244 B (44.5%)",
    "Compressed: system.ltx, 265 B -> 208 B (78.5%)",
    "Aliased: system_copy.ltx -> system.ltx",
    "Compressed: text\\eng\\st_items.xml, 203 B -> 135 B (66.5%)",
    "Compressed: text\\eng\\st_ui.xml, 143 B -> 123 B (86.0%)",
    "Compressed: text\\ukr\\st_items.xml, 203 B -> 141 B (69.5%)",
    "Compressed: text\\ukr\\st_ui.xml, 143 B -> 125 B (87.4%)",
    "Reverted: tiny.ltx, 4 B (compression saved nothing)",
    "Compressed: ui\\textures_descr\\ui_test_sheet.xml, 352 B -> 144 B (40.9%)",
    "Closed volume: a.db0, 4.79 KB, 16 entries",
    "Opened volume: a.db1",
  ],
}
`;

exports[`archive pack verbose output should write the expected files 1`] = `
[
  {
    "path": "failing-source/alife.ltx",
    "sha256": "160920506a492754ff5c45ceb7f4d169e19e002dff25be0cfe03b1cc671b91cd",
    "size": 781,
  },
  {
    "path": "failing-source/defines.ltx",
    "sha256": "3901c71e698c9be76fd7502c7837f9ee3176c592edcb120156788f1ad1957b7d",
    "size": 3848,
  },
  {
    "path": "failing-source/empty.ltx",
    "sha256": "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
    "size": 0,
  },
  {
    "path": "failing-source/evaluation.ltx",
    "sha256": "13b3971565375db44d091d58246aaf728df84d55f61adcd232f1351b621e81cc",
    "size": 276,
  },
  {
    "path": "failing-source/fonts.ltx",
    "sha256": "c68091a9f10ac4545cd0818f9e1a98194898f8fe3483e620328122353e50b93d",
    "size": 2021,
  },
  {
    "path": "failing-source/game.ltx",
    "sha256": "c502a7d26aff39902fcd3631e65c37b732a8e85470aff4267cbb04f36a30184b",
    "size": 218,
  },
  {
    "path": "failing-source/gameplay/dialogs.xml",
    "sha256": "6583bab4e036cca053ce8c820639a39b80dc7bae71d4adba54d5ee2d865cc5b4",
    "size": 1670,
  },
  {
    "path": "failing-source/gameplay/dialogs_zaton.xml",
    "sha256": "aaaaff52afc3c50a3907ba992d7b73f69e90146421385d22f07d363131e474b9",
    "size": 548,
  },
  {
    "path": "failing-source/misc/inventory_icons.ltx",
    "sha256": "5c7b9ae42acbb5e29fe65dc0b14417681fbca966fafac096807a369e30779c2a",
    "size": 1126,
  },
  {
    "path": "failing-source/notes.md",
    "sha256": "4a28fc250c09e1f28c9f37486fca6db3c7a4ee707373216f6f7bd62ade5d9330",
    "size": 8,
  },
  {
    "path": "failing-source/readme.txt",
    "sha256": "9a0f2b10fc240fbd22e58339818c4925a785357c01add69f031786f866c2cede",
    "size": 9,
  },
  {
    "path": "failing-source/system.ltx",
    "sha256": "b4a4a566d26d645fbb86678c4c16dc9fd8b540b786b191c596801de49ff60da1",
    "size": 265,
  },
  {
    "path": "failing-source/system_copy.ltx",
    "sha256": "b4a4a566d26d645fbb86678c4c16dc9fd8b540b786b191c596801de49ff60da1",
    "size": 265,
  },
  {
    "path": "failing-source/text/eng/st_items.xml",
    "sha256": "c0b041ad4bbb98e0578a0d2e7a2cf84cf10271919fad252b7cb79c62b605b89d",
    "size": 203,
  },
  {
    "path": "failing-source/text/eng/st_ui.xml",
    "sha256": "6eb95635b812a217ea18561f4aab2c1dea34da97683264abf1346a404358fbb3",
    "size": 143,
  },
  {
    "path": "failing-source/text/ukr/st_items.xml",
    "sha256": "be9f8767ee5af7d6e2f9378733b862fb52eae569d9dfd2e3686dafe3d6566ec4",
    "size": 203,
  },
  {
    "path": "failing-source/text/ukr/st_ui.xml",
    "sha256": "d35cba9d839aafedf40bb61b4cebfe0c5fda810499ad49e154ed577eed5f7f61",
    "size": 143,
  },
  {
    "path": "failing-source/tiny.ltx",
    "sha256": "24d4941e67d5965d270eaebdb9816b994311e0f2f0e79ef6bb626f362c52842e",
    "size": 4,
  },
  {
    "path": "failing-source/ui/textures_descr/ui_test_sheet.xml",
    "sha256": "44329d941bf367bbd107efb9eb255aa12752cb550d3b99d7b88a2d1d91090012",
    "size": 352,
  },
  {
    "path": "failing-source/zz_big.bin",
    "sha256": "11314f7b4e07b9840b8a3fae910f137bf7e05864d8427ce95330f4e9506e423c",
    "size": 1572864,
  },
  {
    "path": "plain/a.db",
    "sha256": "5f20d18739bf4abada528b5c01b9eb1d5fd9ab51289908e72eee5207379f1842",
    "size": 4907,
  },
  {
    "path": "reported.json",
    "sha256": "e4165f270551ed81cf1a07b6622d40dcb985570f18360cbf39177321053f2351",
    "size": 891,
  },
  {
    "path": "reported/a.db",
    "sha256": "5f20d18739bf4abada528b5c01b9eb1d5fd9ab51289908e72eee5207379f1842",
    "size": 4907,
  },
  {
    "path": "source/alife.ltx",
    "sha256": "160920506a492754ff5c45ceb7f4d169e19e002dff25be0cfe03b1cc671b91cd",
    "size": 781,
  },
  {
    "path": "source/defines.ltx",
    "sha256": "3901c71e698c9be76fd7502c7837f9ee3176c592edcb120156788f1ad1957b7d",
    "size": 3848,
  },
  {
    "path": "source/empty.ltx",
    "sha256": "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
    "size": 0,
  },
  {
    "path": "source/evaluation.ltx",
    "sha256": "13b3971565375db44d091d58246aaf728df84d55f61adcd232f1351b621e81cc",
    "size": 276,
  },
  {
    "path": "source/fonts.ltx",
    "sha256": "c68091a9f10ac4545cd0818f9e1a98194898f8fe3483e620328122353e50b93d",
    "size": 2021,
  },
  {
    "path": "source/game.ltx",
    "sha256": "c502a7d26aff39902fcd3631e65c37b732a8e85470aff4267cbb04f36a30184b",
    "size": 218,
  },
  {
    "path": "source/gameplay/dialogs.xml",
    "sha256": "6583bab4e036cca053ce8c820639a39b80dc7bae71d4adba54d5ee2d865cc5b4",
    "size": 1670,
  },
  {
    "path": "source/gameplay/dialogs_zaton.xml",
    "sha256": "aaaaff52afc3c50a3907ba992d7b73f69e90146421385d22f07d363131e474b9",
    "size": 548,
  },
  {
    "path": "source/misc/inventory_icons.ltx",
    "sha256": "5c7b9ae42acbb5e29fe65dc0b14417681fbca966fafac096807a369e30779c2a",
    "size": 1126,
  },
  {
    "path": "source/notes.md",
    "sha256": "4a28fc250c09e1f28c9f37486fca6db3c7a4ee707373216f6f7bd62ade5d9330",
    "size": 8,
  },
  {
    "path": "source/readme.txt",
    "sha256": "9a0f2b10fc240fbd22e58339818c4925a785357c01add69f031786f866c2cede",
    "size": 9,
  },
  {
    "path": "source/system.ltx",
    "sha256": "b4a4a566d26d645fbb86678c4c16dc9fd8b540b786b191c596801de49ff60da1",
    "size": 265,
  },
  {
    "path": "source/system_copy.ltx",
    "sha256": "b4a4a566d26d645fbb86678c4c16dc9fd8b540b786b191c596801de49ff60da1",
    "size": 265,
  },
  {
    "path": "source/text/eng/st_items.xml",
    "sha256": "c0b041ad4bbb98e0578a0d2e7a2cf84cf10271919fad252b7cb79c62b605b89d",
    "size": 203,
  },
  {
    "path": "source/text/eng/st_ui.xml",
    "sha256": "6eb95635b812a217ea18561f4aab2c1dea34da97683264abf1346a404358fbb3",
    "size": 143,
  },
  {
    "path": "source/text/ukr/st_items.xml",
    "sha256": "be9f8767ee5af7d6e2f9378733b862fb52eae569d9dfd2e3686dafe3d6566ec4",
    "size": 203,
  },
  {
    "path": "source/text/ukr/st_ui.xml",
    "sha256": "d35cba9d839aafedf40bb61b4cebfe0c5fda810499ad49e154ed577eed5f7f61",
    "size": 143,
  },
  {
    "path": "source/tiny.ltx",
    "sha256": "24d4941e67d5965d270eaebdb9816b994311e0f2f0e79ef6bb626f362c52842e",
    "size": 4,
  },
  {
    "path": "source/ui/textures_descr/ui_test_sheet.xml",
    "sha256": "44329d941bf367bbd107efb9eb255aa12752cb550d3b99d7b88a2d1d91090012",
    "size": 352,
  },
  {
    "path": "verbose/a.db",
    "sha256": "5f20d18739bf4abada528b5c01b9eb1d5fd9ab51289908e72eee5207379f1842",
    "size": 4907,
  },
]
`;
